<resources>
    <string name="app_name">Plumber Run</string>
    <string name="main_background">Main Background</string>
    <string name="pop_up">Pop Up</string>
    <string name="play_button">Play</string>
    <string name="menu_button">Menu</string>
    <string name="jump_button">Jump</string>
    <string name="pause_button">Pause</string>
    <string name="plunger">Plunger</string>
    <string name="cloud">Cloud</string>
    <string name="info">Info</string>
    <string name="replay_button">Replay</string>
    <string name="game_paused">Game Paused</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
</resources>
