<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/game_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <jliu.plumberrun.Game
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/pause_button"
            app:srcCompat="@drawable/pause_button" />

        <RelativeLayout
            android:id="@+id/pop_up_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/pop_up"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/pop_up"
                app:srcCompat="@drawable/pop_up" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pop_up"
                android:layout_alignLeft="@+id/pop_up"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="40dp"
                android:background="@null"
                android:contentDescription="@string/menu_button"
                app:srcCompat="@drawable/menu_button" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/pop_up"
                android:layout_alignRight="@+id/pop_up"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="40dp"
                android:background="@null"
                android:contentDescription="@string/play_button"
                app:srcCompat="@drawable/play_button" />

            <ImageButton
                android:id="@+id/replay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/pop_up"
                android:layout_alignRight="@+id/pop_up"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="40dp"
                android:background="@null"
                android:contentDescription="@string/replay_button"
                android:visibility="invisible"
                app:srcCompat="@drawable/replay_button" />

            <TextView
                android:id="@+id/game_paused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/game_paused"
                android:textColor="@color/yellow"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/game_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/game_over"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/score"
                android:textColor="@color/yellow"
                android:textSize="50sp" />

        </RelativeLayout>

    </RelativeLayout>

    <include
        android:id="@+id/load_screen"
        layout="@layout/loading_transition"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>